backend: vectordb setup + main script testing

--- a/financial_rag/backend/app/requirements.txt
+++ b/financial_rag/backend/app/requirements.txt
@@ -1,8 +1,12 @@
 fastapi
 uvicorn
 pyyaml
-# Add other required packages here
 react
 node
-
-
+transformers
+openai
+langchain-community
+langchain
+PyPDF2
+numpy
+pypdf
