--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,9 @@ __pycache__/
 
 # C extensions
 *.so
+# Ignore financial reports
+financial_reports_2024_07_31/
+*financial_reports_2024_07_31*
 
 # Distribution / packaging
 .Python
